# Clipster-Server

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: build.yml
clipboard/: admin.py  apps.py  permissions.py  serializers.py  views.py
clipster/: apps.py  forms.py  models.py  serializers.py  views.py
clipster/migrations/: 0001_initial.py
scripts/: clipster.ini
server/: settings.py  urls.py  wsgi.py
server/staticfiles/crypto/: crypto_form.js  fernet.js
server/staticfiles/crypto/core/: codecBase64.js
server/staticfiles/rest/css/: bootstrap-tweaks.css  default.css
server/templates/rest_framework/: api.html  base.html  list.html  login.html  login_base.html  register.html  register_base.html  share_clip.html  signup.html
