[project]
name = "clipster-server"
version = "0.4.2"
description = "Multi Platform Cloud Clipboard - Linux Server"
authors = [
    { name = "MC51", email = "mc@data-dive.com" }
]
dependencies = [
    "Django==4.0",
    "dj_database_url==2.1.0",
    "djangorestframework==3.13.1",
    "gunicorn==21.2.0",
    "whitenoise==5.3.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
clipster = "clipster.clipster:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clipster_server"]
